Change of styles to address issue with missing footer and squeezed navbar on iPhone

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,3 +1,15 @@
+:root {
+  --app-height: 100%;
+}
+
+#root {
+   height: 100vh;
+
+   @media not all and (hover:hover) {
+       height: var(--app-height);
+   }
+}
+
 // change the theme
 $theme-colors: (
   "custom": #00d95f,
