--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,3 @@
-#root {
-    position: fixed;
-    height: 100%;
-    min-width: 100%;
-    overflow-y: auto;
-}
-
 body {
     background-color: #f2f7f5;
     color: #475d5b;
